tests/NormalTests/paczka1/fuzzy1/48672586.err
Error in line 1: 8dDmQcChFMk A235 69,2
Error in line 3: 8dDmQcChFMk A230 73,7
Error in line 18: MoXqnOd S866 21,7
Error in line 12: IA1Sb S866 78,2
Error in line 25: A235 A235 24,8
Error in line 31: A235 A220 67,8
